--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "gulp-csso": "^4.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "2.6.5",
+    "gulp-svgstore": "^7.0.1",
     "stylelint": "^13.13.1",
     "stylelint-config-htmlacademy": "0.1.4"
   },
