Добавляет сборку js

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "browser-sync": "^2.26.12",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-csso": "^4.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
@@ -15,6 +16,7 @@
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "2.6.5",
     "gulp-svgstore": "^7.0.1",
+    "gulp-terser": "^2.0.1",
     "stylelint": "^13.13.1",
     "stylelint-config-htmlacademy": "0.1.4"
   },
