--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-sourcemaps": "2.6.5",
     "gulp-svgstore": "^7.0.1",
     "gulp-terser": "^2.0.1",
+    "postcss": "^8.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-htmlacademy": "0.1.4"
   },
