--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^4.0.1",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
@@ -17,7 +18,6 @@
     "gulp-sourcemaps": "2.6.5",
     "gulp-svgstore": "^7.0.1",
     "gulp-terser": "^2.0.1",
-    "nunjucks": "^3.2.3",
     "postcss": "^8.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-htmlacademy": "0.1.4"
@@ -37,7 +37,7 @@
   "editorconfig-cli": [
     "*.json",
     "*.js",
-    "src/*.html",
+    "src/**/*.html",
     "src/js/**/*.js",
     "src/img/**/*.svg",
     "src/scss/**/*.scss"
@@ -47,7 +47,6 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.1",
-    "gulp-nunjucks-render": "^2.2.3",
     "normalize.css": "^8.0.1"
   }
 }
