--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^4.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
@@ -18,6 +19,7 @@
     "gulp-sourcemaps": "2.6.5",
     "gulp-svgstore": "^7.0.1",
     "gulp-terser": "^2.0.1",
+    "imagemin-pngquant": "^9.0.2",
     "postcss": "^8.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-htmlacademy": "0.1.4"
