--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.1",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "2.6.5",
     "gulp-svgstore": "^7.0.1",
     "gulp-terser": "^2.1.0",
     "imagemin-pngquant": "^9.0.2",
     "postcss": "^8.3.11",
+    "sass": "^1.49.4",
     "stylelint": "^13.13.1",
     "stylelint-config-htmlacademy": "0.1.4"
   },
